# sdl2_practise

./: .gitignore
source/: CMakeLists.txt  main.cpp
source/cmake/: FindSDL2_ttf.cmake
